Fixation d'un probleme de z-index

--- a/troisdaccord/sass/local/_404.scss
+++ b/troisdaccord/sass/local/_404.scss
@@ -107,3 +107,7 @@ box-shadow: 20px 2px 16px -5px #00000095;
         top: -50vh;
         left: -50vh;
     }
+
+    ul li {
+      z-index: 3;
+    }
