--- a/troisdaccord/style.css
+++ b/troisdaccord/style.css
@@ -1051,3 +1051,7 @@ textarea {
   top: -50vh;
   left: -50vh;
 }
+
+ul li {
+  z-index: 3;
+}
